[1.1.0] (Unreleased)
- BREAKING: Removed BoomEffect.remove method. Effects must be removed through their channels, which has always been the intended behavior.
- Channels can have more than 2 effects each. Check Boom.getMaxEffectsPerChannel() to know the actual limit for the current device.
- Added BoomChannel.getEffects method.

[1.0.0] (February 2023)
- BREAKING: Added generic methods "addEffect" to BoomChannel, and removed specialized ones such as "addReverb".
- BREAKING: Removed sourceGain and sourceCutoff from BoomChannel in favor of the new Filter class, which has the same functionality and some more.
- Added Filters to channels and effects, which are created automatically in both cases.
- Channels can have two effects at once instead of just one.
- Improved error handling after all sensitive OpenAL calls.
- Added new effects: Auto Wah, Chorus, Compressor, Flanger, Pitch Shifter, Ring Modulator, and Vocal Morpher.
- Volume, pitch, and pan values are now clamped to a safe and functional range in Boom.play and Boom.loop methods to avoid a cascade of OpenAL errors.
- Added updateSoundToChannel method that updates a Sound ID with the current state of the given channel. Must be called manually.
- Updated libGDX from 1.9.11 to 1.11.0.
- Created example app.

[0.0.2] (August 2020)
- Updated libGDX from 1.9.9 to 1.9.11.
- Fixed a reflection issue.

[0.0.1] (April 2020)
- First prototype release.